# blackjack-agent

./: .coveragerc  .gitignore  ENVIRONMENT_VARIABLES.md  Makefile  config.py  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  runner.py
dealer-agent/tools/: dealer.py
dealer_agent/: agent.py  models.py
dealer_agent/tools/: __init__.py  dealer.py  wrapper.py
scripts/: migrate_sessions_table.py  test_setup.py
services/: README.md  __init__.py  card_utils.py  db.py  models.py  schema.sql  service_manager.py  user_manager.py  wallet.py
services/wallet/: DealerPrivateKeyWallet.py  UserWalletAggregator.py  UserWalletWrapper.py  WalletFactory.py  WalletService.py  WalletWrapperBase.py  __init__.py  manual_validation.py  transaction_utils.py  usage.md
tests/: GUIDELINES.md  README.md  __init__.py  conftest.py  test_foundation.py  test_helpers.py
tests/dealer/integration/: __init__.py  test_complete_game_flow.py  test_dealer_tools.py  test_display_state_integration.py  test_full_round_dealer_plays.py  test_full_round_player_blackjack.py  test_full_round_player_bust.py  test_game_history_integration.py  test_game_status_integration.py  test_place_bet_integration.py  test_settle_bet_integration.py  test_shoe_depletion_reshuffle.py  test_simple_integration.py  test_state_corruption_prevention.py
tests/dealer/unit/: __init__.py  test_atomic_operations.py  test_check_shoe_exhaustion.py  test_deal_initial_hands.py  test_display_state.py  test_draw_card.py  test_draw_card_wrapper.py  test_evaluate_hand.py  test_get_game_history_wrapper.py  test_get_game_status_no_history.py  test_history_tracking.py  test_initialize_game.py  test_place_bet.py  test_process_dealer_play.py  test_process_player_action.py  test_process_player_action_simple.py  test_reset_for_next_hand.py  test_settle_bet.py  test_shuffle_shoe.py  (+5 more)
tests/integration/: test_real_wallet_integration.py
(+8 files in other folders)
