[project]
name = "blackjack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=1.7.0",
    "litellm>=1.74.7",
    "psycopg[binary,pool]>=3.1.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "privy-client>=0.5.0",
    "privy-eth-account>=0.1.0",
    "web3>=7.12.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dealer_agent"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
